--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Penilaian Bazaar Kurikulum</title>
+    <title>Apresiasi Bazar Gembira</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
@@ -184,7 +184,7 @@
                                 <img src="https://upload.wikimedia.org/wikipedia/id/thumb/a/a4/Logo_SMK_Negeri_1_Purbalingga.png/1024px-Logo_SMK_Negeri_1_Purbalingga.png" 
                                      alt="Logo SMK Negeri 1 Purbalingga" class="school-logo">
                                 <div>
-                                    <h2>Selamat Datang di Penilaian Bazaar</h2>
+                                    <h2>Selamat Datang di Apresiasi Bazar Gembira</h2>
                                     <p class="mb-0">SMK Negeri 1 Purbalingga</p>
                                 </div>
                             </div>
@@ -214,7 +214,7 @@
                              alt="Logo SMK Negeri 1 Purbalingga" class="school-logo">
                         <div class="school-info">
                             <div class="school-name">SMK NEGERI 1 PURBALINGGA</div>
-                            <div class="school-motto">"Unggul dalam Prestasi, Berkarakter, dan Berwawasan Lingkungan"</div>
+                            <div class="school-motto">"Unggul dalam Prestasi, Berkarakter, berwawasan lingkungan dan Smart Innovative"</div>
                         </div>
                     </div>
                 </div>
@@ -222,7 +222,7 @@
 
             <div class="container">
                 <header class="text-center mb-4">
-                    <h1 class="display-5">Apresiasi Bazaar Kurikulum</h1>
+                    <h1 class="display-5">Apresiasi Bazaar Gembira</h1>
                     <p class="lead">Pilih stand yang ingin Anda beri nilai. Anda hanya dapat memberi nilai sekali untuk setiap stand.</p>
                     <p class="text-muted">Login sebagai: <span id="current-user-email" class="font-weight-bold text-primary"></span></p>
                     <div>
@@ -896,4 +896,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
